[package]
name = "nwn-rs-masterlist"
version = "8193.34.0"
edition = "2021"
license = "MIT"
description = "nwn.rs masterlist wrapper"
email = "urothis@gmail.com"

[badges]
maintenance = { status = "experimental" }

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
